--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,10 @@ path = "src/exercises/ex1.rs"
 name = "ex2"
 path = "src/exercises/ex2.rs"
 
+[[bin]]
+name = "ex3"
+path = "src/exercises/ex3.rs"
+
 # [[bin]]
 # name = "my_bin"
 # path = "path/to/my/bin"
